Bug 50722 - scroll bars keep moving out of position until they disappear when zooming
Summary: scroll bars keep moving out of position until they disappear when zooming
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: Other All
: medium major
Assignee: Noel Power
URL:
Whiteboard: target:3.6.0.0.beta1 target:3.6.0
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-05 05:13 UTC by Noel Power
Modified: 2012-08-03 09:11 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Noel Power 2012-06-05 05:13:46 UTC
In calc page preview when you keep zooming in to the page such that a part of the
page get obscured, both of the right and bottom scroll bars start moving away
from the edge of the window frame toward the document, eventually they will even
disappear. Resizing the window will correct it.
Comment 1 Not Assigned 2012-06-05 05:22:54 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=05409d2f950cb8c747afa621c0f43e3bafbc56b7

fix incredible shrinking scrollbars when zooming in calc preview fdo#50722
Comment 2 Not Assigned 2012-06-05 05:28:57 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=daf35c9aa78aad9638e49d81af020677273250d4&g=libreoffice-3-6

fix incredible shrinking scrollbars when zooming in calc preview fdo#50722


It will be available in LibreOffice 3.6.0.