fix incredible shrinking scrollbars when zooming in calc preview fdo#50722

Change-Id: If6fe9ccb1aa3320d96921f76a86def7d588f5f4e